--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
